Updated 'Part 2 - 4. Indirectly Accessing Data - Pointers and Scope' dangling-pointer slider

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -507,6 +507,14 @@ aside[aria-label="How does this work?"] ul > li ul li ul li::before {
 /* --- END:   Fluid Videos ------*/
 
 
+.textImageIconInline {
+  width: 20px; 
+  height: 20px; 
+  display: inline; 
+  vertical-align: top; 
+  margin-bottom: 0;
+}
+
 .linkPoint {
   display: block;
   clear: both;
