Update bios with roles.

--- a/src/components/contributors.astro
+++ b/src/components/contributors.astro
@@ -23,12 +23,12 @@ const dont_include = [
     affiliation="Deakin University"
     imgUrl="andrew_hike_img"
     tag="Co-Creator"
-    desc="Professor Andrew Cain is a Professor in the School of IT at Deakin University, and is an educational leader and innovator, driven to make big changes in the way education works. I have been able to transform education practice at school, course, and subject levels with a focus on using innovative approaches to assessment to engage students in effective learning."
+    desc="Professor Andrew Cain is the lead author of The Programmer's Field Guide. He is a Professor in the School of IT at Deakin University, and is an educational leader and innovator, driven to make big changes in the way education works. He has been able to transform education practice at school, course, and subject levels with a focus on using innovative approaches to assessment to engage students in effective learning."
   />
 
   <MainContributor
     name="Charlotte Pierce"
-    desc="Dr. Charlotte Pierce is a a cross-disciplinary academic with strong interests in education, artificial intelligence, teaching tools, games, and computational creativity. She holds a PhD from Swinburne University of Technology, for which she studied serious games for music education and prototyped evolutionary algorithms to generate infinite sight reading practice exercises. More recent work focuses on computer science education, where she is particularly interested in feedback, pedagogy, educational games, AI tools, and task-based portfolio assessment."
+    desc="Dr. Charlotte Pierce is the lead editor of The Programmer's Field Guide. She is a Lecturer at Monash University in the Faculty of IT, and has been teaching at universities for over a decade. Charlotte loves teaching, and particularly enjoys the challenges of introductory units. In her spare time Charlotte engages in the appropriately nerdy hobbies of reading and video games, but also plays classical music and performs with a heavy metal band. She has the world's fluffiest dog."
     affiliation="Monash University"
     imgUrl="charlotte_hike_img"
     tag="Co-Creator"
@@ -38,7 +38,7 @@ const dont_include = [
     affiliation="UNSW, Sydney"
     imgUrl="jake_hike"
     tag="Co-Creator"
-    desc="Dr Jake Renzella is a Lecturer at the University of New South Wales in the School of Computer Science and Engineering. Jake is the Co-Head of the Computing and Education research group, and teaching courses like Programming Fundamentals, and Software Engineering Fundamentals 👨achieving university-leading myExperience results."
+    desc="Dr Jake Renzella is the lead website developer for The Programmer's Field Guide. He is a Lecturer at the University of New South Wales in the School of Computer Science and Engineering. Jake is the Co-Head of the Computing and Education research group, teaching courses like Programming Fundamentals, and Software Engineering Fundamentals 👨achieving university-leading myExperience results."
     twitter="https://twitter.com/jakerenzella"
     website="https://jakerenzella.com/"
   />
