--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -16,11 +16,12 @@ const { icon, title } = Astro.props;
 	.card {
 		--sl-card-border: var(--sl-color-purple);
 		--sl-card-bg: var(--sl-color-purple-low);
-		border: 1px solid var(--sl-color-gray-5);
-		background-color: var(--sl-color-black);
+		border: 1px solid var(--sl-color-gray-3);
+		background-color: var(--sl-color-black, var(--sl-color-gray-6));
 		padding: clamp(1rem, calc(0.125rem + 3vw), 2.5rem);
 		flex-direction: column;
 		gap: clamp(0.5rem, calc(0.125rem + 1vw), 1rem);
+		background: linear-gradient(135deg, var(--sl-color-gray-6), transparent 40%);
 	}
 	.card:nth-child(4n + 1) {
 		--sl-card-border: var(--sl-color-orange);
