fix dark mode and add bit shifting

--- a/src/components/contributors.astro
+++ b/src/components/contributors.astro
@@ -38,7 +38,7 @@ const dont_include = [
     affiliation="UNSW, Sydney"
     imgUrl="jake_hike"
     tag="Co-Creator"
-    desc="Dr Jake Renzella is the lead website developer for The Programmer's Field Guide. He is a Lecturer at the University of New South Wales in the School of Computer Science and Engineering. Jake is the Co-Head of the Computing and Education research group, teaching courses like Programming Fundamentals, and Software Engineering Fundamentals 👨achieving university-leading myExperience results."
+    desc="Dr Jake Renzella is the lead website developer for The Programmer's Field Guide. He is a Lecturer at the University of New South Wales in the School of Computer Science and Engineering. Jake is the Co-Head of the Computing and Education research group, teaching courses like Programming Fundamentals, and Software Engineering Fundamentals, achieving university-leading myExperience results."
     twitter="https://twitter.com/jakerenzella"
     website="https://jakerenzella.com/"
   />
