--- a/src/components/maincontributor.astro
+++ b/src/components/maincontributor.astro
@@ -20,6 +20,10 @@ const { name, affiliation, desc, imgUrl, tag, twitter, website } = Astro.props;
     margin-top: -10px;
     margin-bottom: -10px;
   }
+
+  html[data-theme="dark"] img {
+    filter: invert(1);
+  }
 </style>
 
 <Card title={name}>
