add illustrators credits

--- a/src/components/contributors.astro
+++ b/src/components/contributors.astro
@@ -45,7 +45,7 @@ const dont_include = [
 </CardGrid>
 
 <p style="text-align: center; font-family: 'antique-olive'; margin-bottom: 16px; margin-top: 16px">
-  Artwork by ..., and a whole bunch of other people who contributed to the
+  Artwork by Lea Piskiewicz, Komal Sutaria, and a whole bunch of other people who contributed to the
   project:
 </p>
 
