update credit styles and add websites

--- a/src/components/contributors.astro
+++ b/src/components/contributors.astro
@@ -24,6 +24,7 @@ const dont_include = [
     imgUrl="andrew_hike_img"
     tag="Co-Creator"
     desc="Professor Andrew Cain is the lead author of The Programmer's Field Guide. He is a Professor in the School of IT at Deakin University, and is an educational leader and innovator, driven to make big changes in the way education works. He has been able to transform education practice at school, course, and subject levels with a focus on using innovative approaches to assessment to engage students in effective learning."
+    website="https://www.deakin.edu.au/about-deakin/people/andrew-cain"
   />
 
   <MainContributor
@@ -32,6 +33,7 @@ const dont_include = [
     affiliation="Monash University"
     imgUrl="charlotte_hike_img"
     tag="Co-Creator"
+    website="https://https://research.monash.edu/en/persons/charlotte-pierce/"
   />
   <MainContributor
     name="Jake Renzella"
