--- a/src/components/contributors.astro
+++ b/src/components/contributors.astro
@@ -33,7 +33,7 @@ const dont_include = [
     affiliation="Monash University"
     imgUrl="charlotte_hike_img"
     tag="Co-Creator"
-    website="https://https://research.monash.edu/en/persons/charlotte-pierce/"
+    website="https://research.monash.edu/en/persons/charlotte-pierce/"
   />
   <MainContributor
     name="Jake Renzella"
