Add VS Code Extensions page to Setup guides

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -1,5 +1,6 @@
 @import url("https://use.typekit.net/vzr3ole.css");
 @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
+@import url("https://github.com/microsoft/vscode-codicons/raw/main/dist/codicon.css");
 @import url("https://fonts.googleapis.com/css?family=Gaegu&display=swap");
 
 #_top,
@@ -115,6 +116,14 @@
   font-display: swap;
 }
 
+@font-face {
+  font-family: "codicon";
+  src: url("/src/fonts/codicon.ttf") format("ttf");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
 .home-card {
   border-radius: 20%;
   border: 1px dotted black;
@@ -170,6 +179,19 @@ html[data-theme="dark"] a.linux:after {
 a.linux:after {
   font-family: "FontAwesomeBrands";
   content: "\f17c";
+  float: right;
+  border-radius: 5px;
+  border: 1px solid white;
+  padding: 0px 5px 0px 5px;
+}
+
+html[data-theme="dark"] a.vscode:after {
+  border: 1px solid black;
+}
+
+a.vscode:after {
+  font-family: "codicon";
+  content: "\ec29";
   float: right;
   border-radius: 5px;
   border: 1px solid white;
