Fix wording on credits page

--- a/src/components/contributors.astro
+++ b/src/components/contributors.astro
@@ -47,8 +47,8 @@ const dont_include = [
 </CardGrid>
 
 <p style="text-align: center; font-family: 'antique-olive'; margin-bottom: 16px; margin-top: 16px">
-  Artwork by Lea Piskiewicz, Komal Sutaria, and a whole bunch of other people who contributed to the
-  project:
+  Artwork by Lea Piskiewicz and Komal Sutaria.
+  Additional contributions by:
 </p>
 
 {
