Update user select to include webkit version

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -169,6 +169,7 @@ html[data-theme="dark"] .swiper-slide code {
   }
 
   .expressive-code * {
+    -webkit-user-select: none;
     user-select: none;
   }
 }
