--- a/src/components/contributors.astro
+++ b/src/components/contributors.astro
@@ -11,7 +11,6 @@ import { CardGrid } from "@astrojs/starlight/components";
 
 const dont_include = [
   "macite",
-  "jakerenzella",
   "charlottepierce",
   "dependabot[bot]",
 ];
@@ -23,8 +22,8 @@ const dont_include = [
     affiliation="Deakin University"
     imgUrl="andrew_hike_img"
     tag="Co-Creator"
-    desc="Professor Andrew Cain is the lead author of The Programmer's Field Guide. He is a Professor in the School of IT at Deakin University, and is an educational leader and innovator, driven to make big changes in the way education works. He has been able to transform education practice at school, course, and subject levels with a focus on using innovative approaches to assessment to engage students in effective learning."
-    website="https://www.deakin.edu.au/about-deakin/people/andrew-cain"
+    desc="Professor Andrew Cain is the lead author of The Programmer's Field Guide. He is a Professor in the Faculty of Information Technology at Monash University, and is an educational leader and innovator, driven to make big changes in the way education works. He has been able to transform education practice at school, course, and subject levels with a focus on using innovative approaches to assessment to engage students in effective learning."
+    website="https://au.linkedin.com/in/andrew-cain-17a52b3"
   />
 
   <MainContributor
@@ -35,7 +34,7 @@ const dont_include = [
     tag="Co-Creator"
     website="https://research.monash.edu/en/persons/charlotte-pierce/"
   />
-  <MainContributor
+  <!-- <MainContributor
     name="Jake Renzella"
     affiliation="UNSW, Sydney"
     imgUrl="jake_hike"
@@ -43,7 +42,7 @@ const dont_include = [
     desc="Dr Jake Renzella is the lead website developer for The Programmer's Field Guide. He is a Lecturer at the University of New South Wales in the School of Computer Science and Engineering. Jake is the Co-Head of the Computing and Education research group, teaching courses like Programming Fundamentals, and Software Engineering Fundamentals, achieving university-leading myExperience results."
     twitter="https://twitter.com/jakerenzella"
     website="https://jakerenzella.com/"
-  />
+  /> -->
 </CardGrid>
 
 <p style="text-align: center; font-family: 'antique-olive'; margin-bottom: 16px; margin-top: 16px">
