Switch CodeActivity to using live SKO site (WhyPenguins for now)

--- a/src/components/CodeActivity.astro
+++ b/src/components/CodeActivity.astro
@@ -3,8 +3,8 @@ import type { Props } from "@astrojs/starlight/props";
 import { Accordion, AccordionItem } from 'accessible-astro-components'
 const { header, projectName, resources, maxCodeHeight = 600, outputHeight = 300} = Astro.props;
 
-//const srcURL = "https://thoth-tech.github.io/SplashkitOnline";
-const srcURL = "http://127.0.0.1:8000/";
+const srcURL = "https://whypenguins.github.io/SplashkitOnline";
+//const srcURL = "http://127.0.0.1:8000/";
 
 const codeSnippetID = `code-activity-${crypto.randomUUID()}`
 const iFrameID = `code-activity-${crypto.randomUUID()}`
